--- a/css/main.css
+++ b/css/main.css
@@ -2,27 +2,27 @@
   font-size:35px;
   width:40px;
   height:40px;
-  line-height:36px;
+  line-height:56px;
   display:inline-block;
-  text-align:center;
   margin:0 8px;
   color:white;
   opacity:0.75;
 }
 
 
-
-
 h1 {
   font-weight:300;
   letter-spacing: 2px;
   font-size:30px;
-
+  color: #282d32;
 }
-.header h1{
-  margin-left: 40px;
-  text-align: center;
+.header h1 {
+  font-family: 'Montserrat', sans-serif;
   font-size:45px;
+  font-weight: bold;
+  width: 100%;
+  color:white;
+  text-align: center;
 }
 .header .item.social > a:hover {
   opacity:1;
@@ -31,16 +31,18 @@ h1 {
 .header {
   position:relative;
   text-align:center;
-  background:  linear-gradient(60deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+  background:  #282d32;
   color:white;
 }
 
 
 .inner-header {
-  height:35vh;
+  height:40vh;
   width:100%;
-  margin: 0;
-  padding: 0;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  padding: 5px;
+  text-align: center;
 }
 
 .flex { /*Flexbox for containers*/
@@ -53,7 +55,7 @@ h1 {
 .waves {
   position:relative;
   width: 100%;
-  height:15vh;
+  height:10vh;
   margin-bottom:-7px; /*Fix for safari gap*/
   min-height:100px;
   max-height:150px;
@@ -63,7 +65,7 @@ h1 {
   position:relative;
   height:20vh;
   text-align:center;
-  background-color: white;
+  background-color: #282d32;
 }
 
 /* Animation */
@@ -194,3 +196,51 @@ h1 {
 }
 
 
+
+
+/* CSS */
+.source-code {
+  align-items: center;
+  background-color: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: rgba(0, 0, 0, 0.85);
+  cursor: pointer;
+  display: inline-flex;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+}
+
+.source-code:hover,
+.source-code:focus {
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  color: rgba(0, 0, 0, 0.65);
+}
+
+.source-code:hover {
+  transform: translateY(-1px);
+}
+
+.source-code:active {
+  background-color: #F0F0F1;
+  border-color: rgba(0, 0, 0, 0.15);
+  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+  color: rgba(0, 0, 0, 0.65);
+  transform: translateY(0);
+}
