--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ h1 {
   font-weight:300;
   letter-spacing: 2px;
   font-size:30px;
+  padding: 5px;
   color: #282d32;
 }
 .header h1 {
@@ -21,6 +22,14 @@ h1 {
   font-size:45px;
   font-weight: bold;
   width: 100%;
+  color:white;
+  text-align: center;
+}
+.header h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size:20px;
+  width: 100%;
+  letter-spacing: 2px;
   color:white;
   text-align: center;
 }
@@ -34,6 +43,7 @@ h1 {
   background:  #282d32;
   color:white;
 }
+
 
 
 .inner-header {
@@ -196,9 +206,6 @@ h1 {
 }
 
 
-
-
-/* CSS */
 .source-code {
   align-items: center;
   background-color: #FFFFFF;
