--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,10 @@
   opacity:0.75;
 }
 
+.proj_dev{
+  font-size: 18px;
 
+}
 h1 {
   font-weight:300;
   letter-spacing: 2px;
@@ -204,9 +207,13 @@ h1 {
 .footer-dark .item.social > a:hover {
   opacity:1;
 }
-
-
+.source{
+  width: 100%;
+  margin-top: 30px;
+  text-align: center;
+}
 .source-code {
+  float: center;
   align-items: center;
   background-color: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -219,10 +226,10 @@ h1 {
   font-size: 16px;
   font-weight: 600;
   justify-content: center;
-  line-height: 1.25;
+  line-height: 2;
   margin: 0;
   min-height: 3rem;
-  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  padding: calc(.875rem - 2px) calc(1.5rem - 1px);
   position: relative;
   text-decoration: none;
   transition: all 250ms;
