--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,32 +1,34 @@
 .carousel {
     position:relative;
-    width: 50vw;
+    width: 40vw;
     margin-top:40px;
+    margin-bottom: 10px;
 }
 .carousel-cell {
-    width: 18vw;
+    width: 17.5vw;
     height: 37vw;
-    margin-right: 60px;
-    background: #fff;
+    margin-right: 90px;
+    margin-bottom:2px;
+    background: white;
     border-radius: 5px;
     counter-increment: carousel-cell;
 }
 
 .carousel:before {
     content:"";
-    height:40vw;
-    width:20.4vw;
+    height: 40vw;
+    width:20vw;
     position:absolute;
     top:-1.5vw;
-    left:50%;
-    transform:translateX(-50%);
-    background:url(https://i.ibb.co/5Mqbhzw/i-Phone-X-Template.png);
+    left:51%;
+    transform:translateX(-50%); background:url('../images/samsung_galaxy_template.png');
     background-size:contain;
     background-repeat:no-repeat;
     z-index:2;
 }
 img.screen {
     width:98%;
+  
 }
 .carousel-cell.is-selected {
     opacity: 1;
